# iCloudMail

./: README.md  mail.py  pyproject.toml  snapcraft-icloud-mail-py-0d8c3e4d9583df15d0652cd15e8cc0a4_amd64_2026-02-05T20:26:19.txt  snapcraft.yaml
src/: description.txt
